--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,7 @@ body {
   width: 100%;
   height: 800px;
   background-color: #122315;
-  /* margin-top: -190px; */
+  margin-top: -1px;
   border: none;
   -webkit-mask:conic-gradient(from -45deg at bottom,#0000,#000 1deg 89deg,#0000 90deg) 50%/80px 100%;
 }
@@ -453,7 +453,7 @@ u {
 
   .second-div {
     height: 320px;
-    margin-top: 78px;
+    margin-top: -1px;
     padding: auto;
   }
 
@@ -477,6 +477,7 @@ u {
   }
 
   .third-div {
+    margin-top: 2rem;
     height: auto;
   }
 
