--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -13,6 +13,8 @@
     />
     <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="{% static 'portal/Images/favicon.png' %}" type="image/x-icon">
+
   </head>
   <body>
     {% include 'portal/includes/navbar.html' %}
