--- a/portal/templates/portal/includes/timeline.html
+++ b/portal/templates/portal/includes/timeline.html
@@ -26,7 +26,7 @@
       <div id="b7">09:00A.M. <br />Opening Ceremony</div>
     </div> -->
     <div class="timeline">
-      <img src="{% static 'portal/images/timeline.png' %}" />
+      <img src="{% static 'portal/images/Timeline-tracks.png' %}" />
     </div>
   </body>
 </html>
