--- a/static/portal/home_styles.css
+++ b/static/portal/home_styles.css
@@ -430,6 +430,9 @@ u {
   justify-content: space-around;
 }
 
+#numbers #name1 {
+  text-align: center;
+}
 
 #numbers svg {
   position: absolute;
@@ -575,7 +578,7 @@ u {
     height: 320px;
     margin-top: 20px;
     padding: auto;
-    padding-top: 50px;
+    padding-top: 90px;
   }
 
   .what {
