--- a/portal/templates/portal/create_team.html
+++ b/portal/templates/portal/create_team.html
@@ -15,10 +15,10 @@
       rel="stylesheet"
     />
     <link href="https://db.onlinewebfonts.com/c/991f6390a7781b853b9ad24333df327b?family=Supria+Sans+W01+Regular" rel="stylesheet">
-    
+    <link rel="icon" type="image/x-icon" href="{% static 'portal/images/favicon.png' %}">
     <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="{% static "portal/images/favicon.png" %}}">
+    <link rel="icon" type="image/x-icon" href="{% static 'portal/images/favicon.png' %}">
 
     <title>Sociovate - Create a team</title>
 </head>
