--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -13,6 +13,8 @@
       href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" type="image/x-icon" href="{% static 'portal/images/favicon.png' %}">
     <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
