--- a/portal/templates/portal/login.html
+++ b/portal/templates/portal/login.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="icon" type="image/x-icon" href="{% static 'portal/images/favicon.png' %}">
     <script
       src="https://kit.fontawesome.com/66aa7c98b3.js"
       crossorigin="anonymous"
