--- a/portal/templates/portal/password_reset.html
+++ b/portal/templates/portal/password_reset.html
@@ -45,8 +45,8 @@
                </div>
               {% endfor %}  
             {% endif %}
-            <button id="login-submit"><input type="submit" name="submit" class="registerbtn" value="Login" placeholder="Login" /></button>
-            <p>Don't have an account? <a href="{% url 'register_view' %}">Register</a></p>
+            <button id="login-submit"><input type="submit" name="submit" class="registerbtn" value="Login" placeholder="Confirm" /></button>
+            
           </form>
       </div>
     </div>
