--- a/portal/templates/portal/password_reset_email_form.html
+++ b/portal/templates/portal/password_reset_email_form.html
@@ -43,7 +43,7 @@
               {% endfor %}  
             {% endif %}
             <button id="login-submit"><input type="submit" name="submit" class="registerbtn"  placeholder="Submit" /></button>
-            <p style="color:black">Don't have an account? <a href="{% url 'login_view' %}">Back</a></p>
+            <p style="color:black"><a href="{% url 'login_view' %}" style="color:black">Back</a></p>
           </form>
       </div>
     </div>
