--- a/portal/templates/portal/password_reset.html
+++ b/portal/templates/portal/password_reset.html
@@ -31,7 +31,7 @@
           <form method="post">
             {% csrf_token %}
             <div class="email-container">
-              <label for="email">Password</label>
+              <label for="email">New Password</label>
               <input type="text" id="password" name="password" />
             </div>
             <div class="password-container">
