--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -56,7 +56,7 @@
           <div class="what">
             What is Sociovate?
           </div>
-          <div class="desc">An overnight offline ideathon & designathon collaboratively organised by Interaction Design Association (IxDA) and The Institution of Engineering and Technology(IET) at VIT-Vellore. The event expects to see over 250 participants. It aims to spotlight unique and innovative ideas over 33 hours on 17 SDG principles and design a prototype, from 18th to 19th March.</div>
+          <div class="desc">An overnight offline ideathon & designathon collaboratively organised by Interaction Design Association (IxDA) and The Institution of Engineering and Technology(IET) at VIT-Vellore. The event expects to see over 250 participants. It aims to spotlight unique and innovative ideas over 33 hours on 17 SDG principles and design a prototype, from 21st to 22nd March.</div>
           <div class="regnow">
             <a href="{% url 'register_view' %}" id="register_a"><p style="color: aliceblue;">-> Register now</p></a>
             <u>Make an Impact on Social Development</u>
@@ -117,7 +117,7 @@
                       <div class="containers">
                         <img class="sdgimg" src="{% static 'portal/images/Pasted Graphic 8.png' %}" alt="">
                         <p class="chapt"><strong>IET<strong></p>
-                          <p class="fullname">Institute of Engineering &<br>Technology</p>
+                          <p class="fullname">The Institution of Engineering &<br>Technology</p>
                         </div>
                         <div class="containers">
                           <img class="sdgimg" src="{% static 'portal/images/Pasted Graphic 7.png' %}" alt="">
