--- a/portal/templates/portal/register.html
+++ b/portal/templates/portal/register.html
@@ -46,7 +46,7 @@
           {% endfor %}
           {% endif %}
           <button><input type="submit" name="submit" placeholder="Submit" id="register-submit"></button>
-          <p>Have an account? <a href="{% url 'login_view' %}">Login</a></p>
+          <p>Have an account? <a href="{% url 'login_view' %}" style="color:lightgreen">Login</a></p>
         </form>
       </div>
     </div>
